# ESP_IDF_Samsung-Sonyo..

./: README.md  sdkconfig  sdkconfig.old
components/arduino/: CMakeLists.txt
components/arduino/libraries/IRremoteESP8266/examples/SmartIRRepeater/: SmartIRRepeater.ino
main/: CMakeLists.txt  SamsungAC.cpp  SanyoAC.cpp  TecoAC.cpp  main.cpp
